--- a/src/app/ugyfel/ugyfel-tabla/ugyfel-tabla.component.html
+++ b/src/app/ugyfel/ugyfel-tabla/ugyfel-tabla.component.html
@@ -38,7 +38,7 @@
   </thead>
   <tbody>
   <ng-container *ngFor="let item of items; let i = index">
-    <tr (click)="clickforrow(i)" [class.active]="i == selectedrow">
+    <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
       <td *ngIf="zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="clickforzoom(i)">
         <i class="fa fa-check" aria-hidden="true"></i>
       </td>
@@ -67,8 +67,10 @@
         <div>{{item.Ajanlotta}}</div>
       </td>
     </tr>
-    <tr *ngIf="item.Megjegyzes !== null && item.Megjegyzes !== ''" (click)="clickforrow(i)" [class.active]="i == selectedrow">
-      <td colspan="11">{{item.Megjegyzes}}</td>
+    <tr *ngIf="i === clickedidindex && egyTemplate !== undefined" [class.active]="i === clickedidindex">
+      <td colspan="100">
+        <ng-template *ngTemplateOutlet="egyTemplate"></ng-template>
+      </td>
     </tr>
   </ng-container>
   </tbody>
