--- a/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -6,26 +6,22 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
+      <div>
+        <input class="oszlop6" type="file" (change)="onFileChange($event)" #fileInput>
       </div>
-      <div class="col-md-6">
-        <input type="file" (change)="onFileChange($event)" #fileInput>
-      </div>
-    </div>
-    <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Megjegyzés</div>
-      </div>
-      <div class="col-md-4">
-        <input type="text" class="form-control form-control-sm" id="megjegyzes"
-               autocomplete="off"
-               [(ngModel)]="megjegyzes" name="megjegyzes">
-      </div>
-      <div style="color: red;margin-left: 4px">Ha ez a mező üresen marad, automatikusan az eredeti fájlnév kerül a megjegyzésbe.</div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
+      <div>
+        <div class="egylabel">Megjegyzés</div>
+        <input type="text" class="form-control form-control-sm oszlop4" style="display: inline-block" id="megjegyzes"
+               autocomplete="off"
+               [(ngModel)]="megjegyzes" name="megjegyzes">
+        <div style="color: red;margin-left: 4px; display: inline-block">Ha ez a mező üresen marad, automatikusan az eredeti fájlnév kerül a megjegyzésbe.</div>
+      </div>
+    </div>
+
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="file === undefined || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
