--- a/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
+++ b/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
@@ -5,24 +5,16 @@
       Feltöltés
     </button>
   </nav>
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
-    <thead>
-    <tr>
-      <th></th>
-      <th>Id</th>
-      <th>Megjegyzés</th>
-      <th>Méret</th>
-      <th>Ext</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let item of dokumentumservice.Dto; let i = index">
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="letoltes(i)"><i class="fa fa-arrow-down" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Dokumentumkod}}</td>
-      <td>{{item.Megjegyzes}}</td>
-      <td>{{item.Meret}}</td>
-      <td>{{item.Ext}}</td>
-    </tr>
-    </tbody>
-  </table>
+
+  <app-tabla #tabla
+             [items]="dokumentumservice.Dto"
+             [colsets]="dokumentumservice.GridSettings"
+             [letoltes]="true"
+             (forid)="setClickedRow($event)"
+             (fordownload)="letoltes($event)"
+             [egyTemplate]="gridegy">
+  </app-tabla>
+  <ng-template #gridegy>
+    <app-dokumentum-egy (torlesutan)="torlesutan()"></app-dokumentum-egy>
+  </ng-template>
 </div>
