--- a/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
+++ b/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
@@ -5,10 +5,8 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Irány</div>
-      </div>
-      <div class="col-md-2">
+      <div>
+        <div class="egylabel">Irány</div>
         <select type="text" class="form-control form-control-sm"
                 [(ngModel)]="iratservice.DtoEdited.Irany" name="irany">
           <option>Be</option>
@@ -17,79 +15,66 @@
         </select>
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Keletkezett</div>
-      </div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="keletkezett"
+      <div>
+        <div class="egylabel">Keletkezett</div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="keletkezett"
                [(ngModel)]="Keletkezett" name="keletkezett">
-      </div>
-    </div>
-    <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Irattipus</div>
-      </div>
-      <div class="col-md-3">
-        <input type="text" class="form-control form-control-sm" id="irattipus"
-               maxlength="30" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="iratservice.DtoEdited.Irattipus" name="irattipus">
-      </div>
-      <div class="col-md-1">
-        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="IrattipusZoom()">...</button>
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Ügyfél</div>
+      <div>
+        <div class="egylabel">Irattipus</div>
+        <input type="text" class="form-control form-control-sm oszlop3" id="irattipus"
+               maxlength="30" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
+               [(ngModel)]="iratservice.DtoEdited.Irattipus" name="irattipus">
+        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px; display: inline-block" type="button" (click)="IrattipusZoom()">...</button>
       </div>
-      <div class="col-md-4">
-        <input type="text" class="form-control form-control-sm" id="ugyfelnev"
-               maxlength="200" autocomplete="off" style="background-color: aquamarine"
+    </div>
+
+    <div class="row no-gutters editform-row">
+      <div>
+        <div class="egylabel">Ügyfél</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="ugyfelnev"
+               maxlength="200" autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="iratservice.DtoEdited.Ugyfelnev" name="ugyfelnev">
-      </div>
-      <div class="col-md-1">
-        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="UgyfelZoom()">...</button>
+        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px; display: inline-block" type="button" (click)="UgyfelZoom()">...</button>
         <button class="btn btn-sm btn-outline-primary" (click)="UgyfelTorles()"
-                style="margin-left: 4px" type="button">
+                style="margin-left: 4px; display: inline-block" type="button">
           <i class="fa fa-close" aria-hidden="true"></i>
         </button>
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-      </div>
-      <div class="col-md-4">
-        <input type="text" class="form-control form-control-sm" id="ugyfelcim"
+      <div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="ugyfelcim"
                autocomplete="off" readonly="true"
                [(ngModel)]="iratservice.DtoEdited.Ugyfelcim" name="ugyfelcim">
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Küldő</div>
-      </div>
-      <div class="col-md-4">
-        <input type="text" class="form-control form-control-sm" id="kuldo"
+      <div>
+        <div class="egylabel">Küldő</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="kuldo"
                maxlength="100" autocomplete="off"
                [(ngModel)]="iratservice.DtoEdited.Kuldo" name="kuldo">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Tárgy</div>
-      </div>
-      <div class="col-md-4">
-        <input type="text" class="form-control form-control-sm" id="targy"
+      <div>
+        <div class="egylabel">Tárgy</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="targy"
                maxlength="200" autocomplete="off"
                [(ngModel)]="iratservice.DtoEdited.Targy" name="targy">
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
