--- a/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
+++ b/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
@@ -3,33 +3,28 @@
   <h5 *ngIf="!penztarservice.uj">{{penztarservice.cim}} módosítása</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Pénztár</div>
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="penztar"
+      <div>
+        <div class="egylabel">Pénztár</div>
+        <input type="text" class="form-control form-control-sm oszlop3" id="penztar"
                maxlength="200" required autocomplete="off"
                [(ngModel)]="penztarservice.DtoEdited.Penztar1" name="penztar">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Pénznem</div>
-      </div>
-      <div class="col-md-1">
-        <input type="text" class="form-control form-control-sm" id="penznem"
-               maxlength="100" required autocomplete="off" style="background-color: aquamarine"
+      <div>
+        <div class="egylabel">Pénznem</div>
+        <input type="text" class="form-control form-control-sm oszlop2" id="penznem"
+               maxlength="100" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="penztarservice.DtoEdited.Penznem" name="penznem">
-      </div>
-      <div class="col-md-1">
-        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button"
+        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px; display: inline-block" type="button"
                 (click)="PenznemZoom()">...</button>
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
