--- a/src/app/tools/tabla/tabla.component.html
+++ b/src/app/tools/tabla/tabla.component.html
@@ -1,6 +1,7 @@
 <table class="table table-bordered table-sm table-responsive" style="border: none">
   <thead>
   <tr>
+    <th *ngIf="letoltes"></th>
     <th *ngIf="zoom"></th>
     <th *ngFor="let cs of colsets">{{cs.Title}}</th>
   </tr>
@@ -8,12 +9,19 @@
   <tbody>
   <ng-container *ngFor="let item of items; let i = index">
     <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
-      <td *ngIf="zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="clickforzoom(i)">
+      <td *ngIf="letoltes" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
+        (click)="clickfordownload(i)">
+        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+      </td>
+
+      <td *ngIf="zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
+        (click)="clickforzoom(i)">
         <i class="fa fa-check" aria-hidden="true"></i>
       </td>
 
       <td *ngFor="let cs of colsets; let j = index">
-        <div *ngIf="cs.Type === 'INT' && j === 0" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer" (click)="clickforid(i)">{{item[cs.Name]}}</div>
+        <div *ngIf="cs.Type === 'INT' && j === 0 && idlink" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer" (click)="clickforid(i)">{{item[cs.Name]}}</div>
+        <div *ngIf="cs.Type === 'INT' && j === 0 && !idlink" style="text-align: right" >{{item[cs.Name]}}</div>
         <div *ngIf="cs.Type === 'INT' && j > 0" style="text-align: right">{{item[cs.Name]}}</div>
 
         <div *ngIf="cs.Type === 'NUMBER'" style="text-align: right">{{item[cs.Name] | number: '1.2-2'}}</div>
