--- a/src/app/cikk/cikk-egy/cikk-egy.component.html
+++ b/src/app/cikk/cikk-egy/cikk-egy.component.html
@@ -24,14 +24,7 @@
     </nav>
   </div>
 
-  <!--  export enum CikkEgyMode {
-  Reszletek = 1,
-  Torles = 2,
-  Modositas = 3
-  BeszerzesKivet = 4
-  }-->
-
-  <ng-container *ngIf="cikkservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="cikkservice.cim"
                      [item]="cikkservice.Dto[cikkservice.DtoSelectedIndex]"
@@ -40,7 +33,7 @@
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="cikkservice.EgyMode === 2">
+  <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
       <app-tetel-torles [cim]="cikkservice.cim"
                         [eppFrissit]="eppFrissit"
@@ -49,12 +42,14 @@
       </app-tetel-torles>
     </div>
   </ng-container>
-  <ng-container *ngIf="cikkservice.EgyMode === 3">
+  <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <app-cikk-szerkesztes></app-cikk-szerkesztes>
+      <app-cikk-szerkesztes (KontenerKeres)="EgyReszletek()">
+      </app-cikk-szerkesztes>
     </div>
   </ng-container>
-  <ng-container *ngIf="cikkservice.EgyMode === 4">
+
+  <ng-container *ngIf="egymode === 6">
     <div [@rowanimation]>
       <app-cikk-beszerzes-kivet></app-cikk-beszerzes-kivet>
     </div>
