--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -14,17 +14,15 @@
     </div>
 
     <div class="row no-gutters editform-row">
-      <div>
+      <div style="margin-right: 5px">
         <div class="egylabel">Me</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="me"
                maxlength="10" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="cikkservice.DtoEdited.Me" name="me">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px; display: inline-block" type="button" (click)="MeZoom()">...</button>
       </div>
-    </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
+      <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">ÁFA kulcs</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="afakulcs"
                maxlength="10" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
@@ -34,16 +32,21 @@
     </div>
 
     <div class="row no-gutters editform-row">
-      <div>
+      <div style="margin-right: 5px">
         <div class="egylabel">Egységár</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="egysegar"
                maxlength="10" required autocomplete="off"
                [(ngModel)]="cikkservice.DtoEdited.Egysegar" name="egysegar">
       </div>
-    </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
+      <div style="display: inline-block; margin-right: 5px">
+        <div class="egylabel">Tömeg, kg</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="tomeg"
+               maxlength="10" required autocomplete="off"
+               [(ngModel)]="cikkservice.DtoEdited.Tomegkg" name="tomeg">
+      </div>
+
+      <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Készletet képez</div>
         <select type="text" class="form-control form-control-sm"
                 [(ngModel)]="cikkservice.DtoEdited.Keszletetkepez" name="kk">
@@ -54,35 +57,22 @@
     </div>
 
     <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Tömeg, kg</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="tomeg"
-               maxlength="10" required autocomplete="off"
-               [(ngModel)]="cikkservice.DtoEdited.Tomegkg" name="tomeg">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
-      <div>
+      <div style="margin-right: 5px">
         <div class="egylabel">Termékdíj KT</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="termekdijkt"
                maxlength="10" autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="cikkservice.DtoEdited.Termekdijkt" name="termekdijkt">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px; display: inline-block" type="button" (click)="TermekdijZoom()">...</button>
       </div>
-    </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
+      <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Termékdíj megnevezés</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="termekdijmegnevezes"
                autocomplete="off" readonly
                [(ngModel)]="cikkservice.DtoEdited.Termekdijmegnevezes" name="termekdijmegnevezes">
       </div>
-    </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
+      <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Termékdíj egységár</div>
         <input type="number" class="form-control form-control-sm oszlop1" id="termekdijegysegar"
                autocomplete="off" readonly
