--- a/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
+++ b/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
@@ -28,17 +28,8 @@
     </nav>
   </div>
 
-  <!--  export enum UgyfelEgyMode {
-    Reszletek = 1,
-    Torles = 2,
-    Modositas = 3,
-    Projekt = 4,
-    UgyfelterLink = 5,
-    Csoport = 6,
-    Vcard = 7
-    }-->
 
-  <ng-container *ngIf="ugyfelservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="ugyfelservice.cim"
                      [item]="ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex]"
@@ -47,7 +38,7 @@
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="ugyfelservice.EgyMode === 2">
+  <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
       <app-tetel-torles [cim]="ugyfelservice.cim"
                         [eppFrissit]="eppFrissit"
@@ -56,12 +47,14 @@
       </app-tetel-torles>
     </div>
   </ng-container>
-  <ng-container *ngIf="ugyfelservice.EgyMode === 3">
+  <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <app-ugyfel-szerkesztes></app-ugyfel-szerkesztes>
+      <app-ugyfel-szerkesztes (KontenerKeres)="EgyReszletek()"></app-ugyfel-szerkesztes>
     </div>
   </ng-container>
-  <ng-container *ngIf="ugyfelservice.EgyMode === 6">
+
+
+  <ng-container *ngIf="egymode === 7">
     <div [@rowanimation]>
       <app-ugyfel-csoport [selected]="ugyfelservice.DtoEdited.Csoport"
                           [eppFrissit]="eppFrissit"
@@ -70,17 +63,17 @@
       </app-ugyfel-csoport>
     </div>
   </ng-container>
-  <ng-container *ngIf="ugyfelservice.EgyMode === 4">
+  <ng-container *ngIf="egymode === 8">
     <div [@rowanimation]>
       <app-ugyfel-projekt></app-ugyfel-projekt>
     </div>
   </ng-container>
-  <ng-container *ngIf="ugyfelservice.EgyMode === 5">
+  <ng-container *ngIf="egymode === 9">
     <div [@rowanimation]>
       <app-ugyfel-ter-link></app-ugyfel-ter-link>
     </div>
   </ng-container>
-  <ng-container *ngIf="ugyfelservice.EgyMode === 7">
+  <ng-container *ngIf="egymode === 10">
     <div [@rowanimation]>
       <app-ugyfel-vcard [item]="ugyfelservice.DtoEdited"
                         (LetoltesClick)="VcardLetoles()">
