--- a/src/app/csoport/csoport-container/csoport-container.component.html
+++ b/src/app/csoport/csoport-container/csoport-container.component.html
@@ -1,20 +1,8 @@
-<!--export enum CsoportContainerMode {
-  Blank = 0,
-  List = 1,
-  Egy = 2,
-  Uj = 3
-}-->
+<ng-container *ngIf="kontenermode === 1">
+  <app-csoport-list (KontenerKeres)="KontenerUj()"></app-csoport-list>
+</ng-container>
 
-<ng-container *ngIf="csoportservice.ContainerMode === 0">
-  <app-blank></app-blank>
-</ng-container>
-<ng-container *ngIf="csoportservice.ContainerMode === 1">
-  <app-csoport-list></app-csoport-list>
-</ng-container>
-<ng-container *ngIf="csoportservice.ContainerMode === 2">
-  <app-csoport-egy></app-csoport-egy>
-</ng-container>
-<ng-container *ngIf="csoportservice.ContainerMode === 3">
-  <app-csoport-szerkesztes></app-csoport-szerkesztes>
+<ng-container *ngIf="kontenermode === 2">
+  <app-csoport-szerkesztes (KontenerKeres)="KontenerList()"></app-csoport-szerkesztes>
 </ng-container>
 
