--- a/src/app/csoport/csoport-egy/csoport-egy.component.html
+++ b/src/app/csoport/csoport-egy/csoport-egy.component.html
@@ -24,15 +24,8 @@
     </nav>
   </div>
 
-  <!--  export enum CsoportEgyMode {
-Reszletek = 1,
-Torles = 2,
-Modositas = 3,
-Felhasznalo = 4,
-Jog = 5
-}-->
 
-  <ng-container *ngIf="csoportservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="csoportservice.cim"
                      [item]="csoportservice.Dto[csoportservice.DtoSelectedIndex]"
@@ -41,7 +34,7 @@ Jog = 5
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="csoportservice.EgyMode === 2">
+  <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
       <app-tetel-torles [cim]="csoportservice.cim"
                         [eppFrissit]="eppFrissit"
@@ -50,17 +43,19 @@ Jog = 5
       </app-tetel-torles>
     </div>
   </ng-container>
-  <ng-container *ngIf="csoportservice.EgyMode === 3">
+  <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <app-csoport-szerkesztes></app-csoport-szerkesztes>
+      <app-csoport-szerkesztes (KontenerKeres)="EgyReszletek()"></app-csoport-szerkesztes>
     </div>
   </ng-container>
-  <ng-container *ngIf="csoportservice.EgyMode === 4">
+
+
+  <ng-container *ngIf="egymode === 11">
     <div [@rowanimation]>
       <app-csoport-felhasznalo></app-csoport-felhasznalo>
     </div>
   </ng-container>
-  <ng-container *ngIf="csoportservice.EgyMode === 5">
+  <ng-container *ngIf="egymode === 12">
     <div [@rowanimation]>
       <app-csoport-jog></app-csoport-jog>
     </div>
