--- a/src/app/primitiv/felhasznalo/felhasznalo-jelszo/felhasznalo-jelszo.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-jelszo/felhasznalo-jelszo.component.html
@@ -4,28 +4,22 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Jelszó</div>
-      </div>
-      <div class="col-md-2">
+      <div style="margin-right: 5px">
+        <div class="egylabel">Jelszó</div>
         <input type="password" class="form-control form-control-sm" id="jelszo"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="jelszo" name="jelszo">
       </div>
-    </div>
-    <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Jelszó újra</div>
-      </div>
-      <div class="col-md-2">
+
+      <div style="display: inline-block; margin-right: 5px">
+        <div class="egylabel">Jelszó újra</div>
         <input type="password" class="form-control form-control-sm" id="jelszoujra"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="jelszoujra" name="jelszoujra">
       </div>
     </div>
 
-    <div class="row no-gutters">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
