--- a/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
+++ b/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
@@ -4,10 +4,8 @@
   <form #f="ngForm">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Csoport</div>
-      </div>
-      <div class="col-md-4">
+      <div>
+        <div class="egylabel">Csoport</div>
         <div *ngFor="let entry of entries;let i = index" class="form-check">
           <input class="form-check-input" type="radio" name="radiogroup" id="entry"
                  [checked]="i === selected" (change)="change(i)">
@@ -18,8 +16,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="button" (click)="okClick()">Ok</button>
       <button class="btn btn-sm btn-default" [disabled]="!f.valid || eppFrissit" style="margin-left:3px;" type="button" (click)="cancelClick()">Mégsem</button>
     </div>
