--- a/src/app/ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
@@ -10,12 +10,8 @@
     </nav>
   </div>
 
-<!--  export enum FeliratkozasEgyMode {
-  Reszletek = 1,
-  Projekt = 2,
-  }-->
 
-  <ng-container *ngIf="ajanlatkeresservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="ajanlatkeresservice.cim"
                      [item]="ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex]"
@@ -24,7 +20,8 @@
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="ajanlatkeresservice.EgyMode === 2">
+
+  <ng-container *ngIf="egymode === 8">
     <div [@rowanimation]>
       <app-ajanlatkeres-projekt></app-ajanlatkeres-projekt>
     </div>
