--- a/src/app/penztar/penztar-egy/penztar-egy.component.html
+++ b/src/app/penztar/penztar-egy/penztar-egy.component.html
@@ -25,15 +25,8 @@
     </nav>
   </div>
 
-<!--  export enum PenztarEgyMode {
-  Reszletek = 1,
-  Torles = 2,
-  Modositas = 3,
-  Tetelek = 4,
-  Export = 5
-  }-->
 
-  <ng-container *ngIf="penztarservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="penztarservice.cim"
                      [item]="penztarservice.Dto[penztarservice.DtoSelectedIndex]"
@@ -42,7 +35,7 @@
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="penztarservice.EgyMode === 2">
+  <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
       <app-tetel-torles [cim]="penztarservice.cim"
                         [eppFrissit]="eppFrissit"
@@ -51,17 +44,18 @@
       </app-tetel-torles>
     </div>
   </ng-container>
-  <ng-container *ngIf="penztarservice.EgyMode === 3">
+  <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <app-penztar-szerkesztes></app-penztar-szerkesztes>
+      <app-penztar-szerkesztes (KontenerKeres)="EgyReszletek()"></app-penztar-szerkesztes>
     </div>
   </ng-container>
-  <ng-container *ngIf="penztarservice.EgyMode === 4">
+
+  <ng-container *ngIf="egymode === 13">
     <div [@rowanimation]>
       <app-penztartetel-container></app-penztartetel-container>
     </div>
   </ng-container>
-  <ng-container *ngIf="penztarservice.EgyMode === 5">
+  <ng-container *ngIf="egymode === 14">
     <div [@rowanimation]>
       <app-penztar-export></app-penztar-export>
     </div>
