--- a/src/app/penztar/penztar-export/penztar-export.component.html
+++ b/src/app/penztar/penztar-export/penztar-export.component.html
@@ -4,24 +4,22 @@
   <form #f="ngForm" (ngSubmit)="submit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Dátum</div>
-      </div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="tol"
+      <div>
+        <div class="egylabel">Dátumtól</div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="tol"
                [(ngModel)]="tol" name="tol">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2"></div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="ig"
+      <div>
+        <div class="egylabel">Dátumig</div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="ig"
                [(ngModel)]="ig" name="ig">
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-secondary" style="margin-left:3px;" [disabled]="!eppFrissit" type="button" (click)="megsem()">Mégsem</button>
     </div>
