--- a/src/app/irat/irat-container/irat-container.component.html
+++ b/src/app/irat/irat-container/irat-container.component.html
@@ -1,16 +1,9 @@
-<!--export enum IratContainerMode {
-  Blank = 0,
-  List = 1,
-  Egy = 2,
-  Uj = 3
-}-->
+<ng-container *ngIf="kontenermode === 1">
+  <app-irat-list [enProjekt]="enProjekt"></app-irat-list>
+</ng-container>
 
-<ng-container *ngIf="iratservice.ContainerMode === 1">
-  <app-irat-list></app-irat-list>
-</ng-container>
-<ng-container *ngIf="iratservice.ContainerMode === 2">
-  <app-irat-egy [enProjekt]="enProjekt"></app-irat-egy>
-</ng-container>
-<ng-container *ngIf="iratservice.ContainerMode === 3">
+<ng-container *ngIf="kontenermode === 2">
   <app-irat-szerkesztes></app-irat-szerkesztes>
 </ng-container>
+
+
