--- a/src/app/irat/irat-egy/irat-egy.component.html
+++ b/src/app/irat/irat-egy/irat-egy.component.html
@@ -31,15 +31,7 @@
     <app-abu></app-abu>
   </div>
 
-<!--  export enum IratEgyMode {
-  Reszletek = 1,
-  Torles = 2,
-  Modositas = 3,
-  Dokumentum = 4,
-  Projekt = 5
-  }-->
-
-  <ng-container *ngIf="iratservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="iratservice.cim"
                      [item]="iratservice.Dto[iratservice.DtoSelectedIndex]"
@@ -48,7 +40,7 @@
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="iratservice.EgyMode === 2">
+  <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
       <app-tetel-torles [cim]="iratservice.cim"
                         [eppFrissit]="eppFrissit"
@@ -57,17 +49,20 @@
       </app-tetel-torles>
     </div>
   </ng-container>
-  <ng-container *ngIf="iratservice.EgyMode === 3">
+  <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
       <app-irat-szerkesztes></app-irat-szerkesztes>
     </div>
   </ng-container>
-  <ng-container *ngIf="iratservice.EgyMode === 4">
+
+
+  <ng-container *ngIf="egymode === 15">
     <div [@rowanimation]>
       <app-dokumentum-container></app-dokumentum-container>
     </div>
   </ng-container>
-  <ng-container *ngIf="iratservice.EgyMode === 5">
+
+  <ng-container *ngIf="egymode === 8">
     <div [@rowanimation]>
       <app-irat-nincsprojekt *ngIf="nincsProjekt"></app-irat-nincsprojekt>
       <app-reszletek *ngIf="!nincsProjekt"
@@ -78,7 +73,8 @@
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="iratservice.EgyMode === 6">
+
+  <ng-container *ngIf="egymode === 16">
     <div [@rowanimation]>
       <app-fotozas-link></app-fotozas-link>
     </div>
