--- a/src/app/dokumentum/dokumentum-egy/dokumentum-egy.component.html
+++ b/src/app/dokumentum/dokumentum-egy/dokumentum-egy.component.html
@@ -20,7 +20,7 @@
   Reszletek = 1,
   Torles = 2,
   }-->
-  <ng-container *ngIf="dokumentumservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="dokumentumservice.cim"
                      [item]="dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex]"
@@ -29,7 +29,7 @@
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="dokumentumservice.EgyMode === 2">
+  <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
       <app-tetel-torles [cim]="dokumentumservice.cim"
                         [eppFrissit]="eppFrissit"
